@@ -13,9 +13,9 @@ add.edges.active(nd,tail=4,head=1,onset=5,terminus=7)
 add.edge(nd,tail=1,head=6)
 deactivate.edges(nd, onset=-Inf, terminus=Inf, e=get.edgeIDs(nd, v=1, alter=6))
 add.edge(nd,tail=1, head=5)  # default activated
-nd2<-reconcile.vertex.activity(nd)
+nd2<-reconcile.vertex.activity(nd,mode='match')
 spls<-get.vertex.activity(nd2,as.spellList=TRUE)
-expect_equal(spls$onset,c(-Inf, 1,1,1,5,-Inf))
+expect_equal(spls$onset,c(-Inf, 1,1,1,5,-Inf),info='test reconcile.vertex.activity w isolate and inactive')
 expect_equal(spls$terminus,c(Inf,3,3,3,7,Inf))
 expect_equal(spls$vertex.id,c(1,2,3,4,4,5))
 
@@ -26,7 +26,7 @@ add.edges.active(nd,tail=4,head=1,onset=5,terminus=7)
 add.edge(nd,tail=1,head=6)
 deactivate.edges(nd, onset=-Inf, terminus=Inf, e=get.edgeIDs(nd, v=1, alter=6))
 add.edge(nd,tail=1, head=5)  # default activated
-reconcile.vertex.activity(nd)
+reconcile.vertex.activity(nd,mode='match')
 spls<-get.vertex.activity(nd,as.spellList=TRUE)
 expect_equal(spls$onset,c(-Inf, 1,1,1,5,-Inf),info='reconcile.vertex.activity modify in place')
 expect_equal(spls$terminus,c(Inf,3,3,3,7,Inf),info='reconcile.vertex.activity modify in place')
@@ -39,14 +39,14 @@ add.edges.active(nd,tail=4,head=1,onset=5,terminus=7)
 add.edge(nd,tail=1,head=6)
 deactivate.edges(nd, onset=-Inf, terminus=Inf, e=get.edgeIDs(nd, v=1, alter=6))
 add.edge(nd,tail=1, head=5)  # default activated
-nd2<-reconcile.vertex.activity(nd, edge.active.default=F)
+nd2<-reconcile.vertex.activity(nd, mode='match',edge.active.default=FALSE)
 spls<-get.vertex.activity(nd2,as.spellList=TRUE)
 expect_equal(spls$onset,c(1, 5, 1, 1, 1, 5))
 expect_equal(spls$terminus,c(3, 7, 3, 3, 3, 7))
 expect_equal(spls$vertex.id,c(1, 1, 2, 3, 4, 4))
 
 # test with bad mode
-expect_error(reconcile.vertex.activity(nd,mode='foobar'),'not supported')
+expect_error(reconcile.vertex.activity(nd,mode='foobar'),"'arg' should be one of")
 
 # ---- reconcile.vertex.activity tests (expand.to.edges mode) ------------
 
@@ -78,11 +78,38 @@ expect_equal(spls$onset,c(-Inf, 1,5,1,1,5,-Inf))
 expect_equal(spls$terminus,c(Inf,3,7,3,3,7,Inf))
 expect_equal(spls$vertex.id,c(1,2,2,3,4,4,5))
 
+# test active default
+
+nd<-network.initialize(3,directed=FALSE)
+activate.vertices(nd,at=0)
+nd[,]<-1
+reconcile.vertex.activity(nd,mode='expand',edge.active.default=TRUE)
+spls<-get.vertex.activity(nd,as.spellList=TRUE)
+expect_equal(spls$onset,c(-Inf,-Inf,-Inf))
+expect_equal(spls$terminus,c(Inf,Inf,Inf))
+
+nd<-network.initialize(3,directed=FALSE)
+activate.vertices(nd,at=0)
+nd[,]<-1
+reconcile.vertex.activity(nd,mode='expand',edge.active.default=FALSE)
+spls<-get.vertex.activity(nd,as.spellList=TRUE)
+expect_equal(spls$onset,c(0,0,0))
+expect_equal(spls$terminus,c(0,0,0))
+
+
 # ---- reconcile.vertex.activity tests (encompass.edges mode) ------------
+
+nd<-network.initialize(3)
+activate.vertices(nd,v=1,onset=0,terminus=2)
+activate.vertices(nd,v=1,onset=3,terminus=4)
+add.edges.active(nd,tail=1,head=2,onset=-1,terminus=5)
+reconcile.vertex.activity(nd, mode='encompass.edges')
+
 
 nd<-network.initialize(6)
 deactivate.vertices(nd, onset=-Inf, terminus=Inf)
 activate.vertices(nd, v=2, onset=2, terminus=5)
+activate.vertices(nd, v=2, onset=8, terminus=10)
 add.edges.active(nd,tail=1:3,head=2:4,onset=1,terminus=3)
 add.edges.active(nd,tail=4,head=1,onset=5,terminus=7)
 add.edge(nd,tail=1,head=6)
@@ -198,3 +225,6 @@ spls<-get.edge.activity(nd2,as.spellList=TRUE)
 expect_equal(spls$onset,c(1,1,6,1,6))
 expect_equal(spls$terminus,c(2,2,6,2,6))
 expect_equal(spls$edge.id,c(1,2,5,6,6))
+
+# test error from bad mode
+expect_error(nd2<-reconcile.edge.activity(nd, mode='destroy.everything!'),"'arg' should be one of")
